# prysm

./: .bazelignore  .buildkite-bazelrc  .deepsource.toml  .dockerignore  .ethspecify.yml  .gitignore  .golangci.yml  .policy.yml  .pre-commit-config.yaml  AGENTS.md  BAZEL_MIGRATION.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Dockerfile.validator  INTEROP.md  Makefile  README.md  SLOT_SCHEDULE_STATUS.md  TERMS_OF_SERVICE.md  WORKSPACE  bazel-bin  bazel-out  bazel-prysm  bazel-testlogs  bazel.sh  cross  deps.bzl  distroless_deps.bzl  eip-8243-kurtosis.yaml  go.mod  go.sum  graffiti-proposal-brief.md  nogo_config.json  peerdas_sync_review.md  plan.md  post_state_8192.ssz  (+4 more)
api/apiutil/: BUILD.bazel  header.go  header_test.go  metrics.go  types.go
api/failover/: BUILD.bazel  failover.go  failover_test.go  log.go
beacon-chain/core/chunks/: BUILD.bazel  signature.go
beacon-chain/core/gloas/: BUILD.bazel  attestation.go  attestation_test.go  bid.go  bid_test.go  builder.go  builder_deposit_request.go  builder_deposit_request_test.go  builder_exit.go  builder_exit_request_test.go  deposit_request.go  deposit_request_bench_test.go  deposit_request_test.go  lookup_root.go  metrics.go  parent_payload.go  payload.go  payload_attestation.go  payload_attestation_test.go  payload_test.go  pending_payment.go  pending_payment_test.go  progressive_ssz.go  proposer_lookahead.go  proposer_slashing.go  proposer_slashing_test.go  upgrade.go  upgrade_test.go  withdrawal.go  withdrawal_test.go  withdrawals.go
beacon-chain/custody/: BUILD.bazel  metrics.go
beacon-chain/execution/enginehttp/: BUILD.bazel  client.go  client_test.go  engine.go  engine_test.go  errors.go
beacon-chain/operations/execproof/: BUILD.bazel  doc.go  key.go  log.go  pool.go  pool_test.go  prune_finalized.go  service.go
beacon-chain/operations/execproof/mock/: BUILD.bazel  mock.go
beacon-chain/operations/execproofs/: BUILD.bazel  pool.go
beacon-chain/operations/payloadattestation/: BUILD.bazel  metrics.go  pool.go  pool_test.go
beacon-chain/operations/payloadattestation/mock/: BUILD.bazel  mock.go
beacon-chain/p2p/gossipsubcrawler/: BUILD.bazel  interface.go
beacon-chain/p2p/partialdatacolumnbroadcaster/: BUILD.bazel  config_test.go  gossip_logger_test.go  log.go  metrics.go  partial.go  partial_test.go  publish_blocking_test.go
beacon-chain/p2p/partialdatacolumnbroadcaster/integrationtest/: BUILD.bazel  two_node_test.go
beacon-chain/proof-generation/: BUILD.bazel  config.go  proof_generator.go  service.go
beacon-chain/rpc/helpers/: BUILD.bazel  broadcast.go  broadcast_test.go
cmd/beacon-chain/config/: BUILD.bazel  options.go
cmd/prysmctl/flags/: BUILD.bazel  fork.go  fork_test.go
cmd/prysmctl/logging/: BUILD.bazel  commands.go  json_to_text.go  json_to_text_test.go
consensus-types/chunks/: BUILD.bazel  beacon_block_chunk.go  error.go
consensus-types/helpers/: BUILD.bazel
crypto/hash/htr/: BUILD.bazel  hashtree.go  hashtree_test.go  log.go
encoding/ssz/query/: BUILD.bazel  analyzer.go  analyzer_test.go  bitlist.go  buildTree.go  container.go  doc.md  dynamic_merkleizer.go  generalized_index.go  generalized_index_test.go  generic_merkleizer.go  list.go  list_test.go  merkleTree.go  merkle_proof.go  merkle_proof_generator.go  merkle_proof_test.go  merkle_tree.go  merkle_tree_prover.go  path.go  path_test.go  proof.go  proof_collector.go  proof_collector_test.go  query.go  query_test.go  ssz_info.go  ssz_interface.go  ssz_interface_test.go  ssz_object.go  ssz_type.go  tag_parser.go  tag_parser_test.go  vector.go
encoding/ssz/query/proof/: BUILD.bazel  hash_tree_root.go  hash_tree_root_test.go  treeroot.go
encoding/ssz/query/testutil/: BUILD.bazel  runner.go  util.go
genesis/embedded/: BUILD.bazel  lookup_test.go
internal/logrusadapter/: BUILD.bazel  adapter.go  adapter_test.go  adapter_withattrs_test.go  log.go
proto/engine/v2/: BUILD.bazel  engine_v2.minimal.ssz.go  engine_v2.pb.go  engine_v2.proto  engine_v2.ssz.go  engine_v2_req_resp.go  engine_v2_req_resp_test.go  payload_status.go
testing/bls/utils/: BUILD.bazel  utils.go
testing/endtoend-kurtosis/: BUILD.bazel  kurtosis_test.go  main_test.go  setup_test.go
testing/endtoend-kurtosis/network-config/: default.yaml
testing/endtoend/components/: BUILD.bazel  beacon_node.go  boot_node.go  builder.go  lighthouse_beacon.go  lighthouse_validator.go  log.go  tracing_sink.go  validator.go  web3remotesigner.go  web3remotesigner_test.go
testing/endtoend/components/eth1/: BUILD.bazel  depositor.go  depositor_test.go  geth_flags.go  geth_flags_test.go  helpers.go  miner.go  node.go  node_set.go  proxy.go  transactions.go  transactions_pricing_test.go  transactions_test.go
testing/endtoend/helpers/: BUILD.bazel  epochTimer.go  helpers.go  helpers_test.go
testing/endtoend/kurtosis/: BUILD.bazel  assertoor.go  assertoor_playbook.go  assertoor_playbook_test.go  assertoor_test.go  assertoor_types.go  doppelganger.go  doppelganger_test.go  helper.go  helper_test.go  logs.go  starlark.go  wrapper.go
testing/endtoend/kurtosis/playbooks/: beacon-chain-sync.yaml  blob-limits.yaml  blobs-included.yaml  block-graffiti.yaml  builder.yaml  checkpoint-sync.yaml  deposits.yaml  fee-recipient.yaml  fork-transition-altair.yaml  fork-transition-bellatrix.yaml  fork-transition-capella.yaml  (+11 more)
testing/integration/: BUILD.bazel  allowed_logs.txt  blob_tx.go  builder_deposit.go  chain_tracker.go  config.go  gloas_missing_payload_test.go  gloas_self_build_test.go  harness.go  helpers.go  ports.go  validator_interceptor.go
zkvm-execution-layer/: BUILD.bazel  config.go  dummy_proof_gen_test.go  dummy_proof_verifier.go  dummy_proof_verifier_test.go  dummyproofgen.go  dummyproofgen_test.go  dummyproofverifier.go  dummyproofverifier_test.go  proof_cache.go  proofcache.go  proofgenerator.go  proofverification.go  registry_proof_gen.go  registry_proof_gen_test.go  registry_proof_verification_test.go  registryproofgen.go  registryproofgen_test.go  registryproofverification.go  registryproofverification_test.go
(+4982 files in other folders)
