load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "dummy_proof_gen.go",
        "dummy_proof_verifier.go",
        "proof_generator.go",
        "proof_verification.go",
        "registry_proof_gen.go",
        "registry_proof_verification.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/zkvm-execution-layer",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dummy_proof_gen_test.go",
        "dummy_proof_verifier_test.go",
        "registry_proof_gen_test.go",
        "registry_proof_verification_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
    ],
)
