load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/OffchainLabs/prysm/v7/beacon-chain/proof-generation",
    visibility = [
        "//beacon-chain:__subpackages__",
    ],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
