load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "service.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/beacon-chain/proof-generation",
    visibility = [
        "//beacon-chain:__subpackages__",
    ],
    deps = [
        "//beacon-chain/core/feed:go_default_library",
        "//beacon-chain/core/feed/state:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
