load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "beacon_block_chunk.go",
        "error.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/consensus-types/chunks",
    visibility = ["//visibility:public"],
    deps = [
        "//config/params:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//runtime/version:go_default_library",
        "//time/slots:go_default_library",
    ],
)
