load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["comparisons.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/consensus-types/helpers",
    visibility = ["//visibility:public"],
    deps = ["//proto/prysm/v1alpha1:go_default_library"],
)
