load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lookup.go",
        "mainnet.go",
    ],
    embedsrcs = ["mainnet.ssz.snappy"],
<<<<<<<< HEAD:genesis/internal/embedded/BUILD.bazel
    importpath = "github.com/OffchainLabs/prysm/v6/genesis/internal/embedded",
    visibility = [
========
    importpath = "github.com/OffchainLabs/prysm/v6/genesis/embedded",
    visibility = [
        "//beacon-chain/db:__subpackages__",
        "//config/params:__pkg__",
>>>>>>>> fc78ad7c5b (initialize genesis data asap at node start):genesis/embedded/BUILD.bazel
        "//genesis:__pkg__",
    ],
    deps = [
        "//beacon-chain/state:go_default_library",
        "//beacon-chain/state/state-native:go_default_library",
        "//config/params:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["lookup_test.go"],
    deps = [
        ":go_default_library",
        "//config/params:go_default_library",
    ],
)
