load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["adapter.go"],
    importpath = "github.com/OffchainLabs/prysm/v7/internal/logrusadapter",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["adapter_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
