load("@prysm//tools/go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    size = "large",
    testonly = True,
    srcs = [
        "kurtosis_test.go",
        "main_test.go",
        "setup_test.go",
    ],
    args = ["-test.v"],
    data = [
        "network-config/default.yaml",
        "//cmd/beacon-chain:oci_image_tarball",
        "//cmd/validator:oci_image_tarball",
    ],
    tags = [
        "manual",
        "requires-network",
    ],
    deps = [
        "//testing/require:go_default_library",
        "@com_github_kurtosis_tech_kurtosis_api_golang//core/lib/enclaves:go_default_library",
        "@com_github_kurtosis_tech_kurtosis_api_golang//core/lib/starlark_run_config:go_default_library",
        "@com_github_kurtosis_tech_kurtosis_api_golang//engine/lib/kurtosis_context:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
