load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "blob_tx.go",
        "builder_deposit.go",
        "chain_tracker.go",
        "config.go",
        "harness.go",
        "helpers.go",
        "ports.go",
    ],
    data = ["allowed_logs.txt"],
    importpath = "github.com/OffchainLabs/prysm/v7/testing/integration",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/core/gloas:go_default_library",
        "//beacon-chain/core/signing:go_default_library",
        "//build/bazel:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//contracts/deposit:go_default_library",
        "//crypto/bls:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//runtime/interop:go_default_library",
        "//runtime/version:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind:go_default_library",
        "@com_github_ethereum_go_ethereum//accounts/keystore:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//crypto/kzg4844:go_default_library",
        "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_holiman_uint256//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "enormous",
    testonly = True,
    srcs = ["gloas_self_build_test.go"],
    args = ["-test.v"],
    data = [
        "allowed_logs.txt",
        "//cmd/beacon-chain",
        "//cmd/validator",
        "@com_github_ethereum_go_ethereum//cmd/geth",
    ],
    embed = [":go_default_library"],
    eth_network = "minimal",
    tags = [
        "integration",
        "manual",
    ],
    deps = [
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/require:go_default_library",
    ],
)
