load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["signature.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/beacon-chain/core/chunks",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/core/signing:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//network/forks:go_default_library",
        "//time/slots:go_default_library",
    ],
)
