load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "errors.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/beacon-chain/execution/enginehttp",
    visibility = ["//visibility:public"],
    deps = [
        "//network:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prysmaticlabs_fastssz//:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
    ],
)
