load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "key.go",
        "pool.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/beacon-chain/operations/execproof",
    visibility = [
        "//beacon-chain:__subpackages__",
    ],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//container/doubly-linked-list:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)
