load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "interface.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/beacon-chain/p2p/gossipsubcrawler",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@com_github_ethereum_go_ethereum//p2p/enode:go_default_library",
        "@com_github_libp2p_go_libp2p//core/peer:go_default_library",
    ],
)

