load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["broadcast.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/beacon-chain/rpc/helpers",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/core/peerdas:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["broadcast_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/rpc/testutil:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/require:go_default_library",
    ],
)
