load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["options.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/cmd/beacon-chain/config",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/node:go_default_library",
        "//config/params:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
