load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["fork.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/cmd/prysmctl/flags",
    visibility = ["//visibility:public"],
    deps = [
        "//runtime/version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fork_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//runtime/version:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
