load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "json_to_text.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v6/cmd/prysmctl/logging",
    visibility = ["//visibility:public"],
    deps = [
        "//runtime/logging/logrus-prefixed-formatter:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["json_to_text_test.go"],
    deps = [
        ":go_default_library",
        "//runtime/logging/logrus-prefixed-formatter:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_joonix_log//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
