load("@prysm//tools/go:def.bzl", "go_library", "go_test")

# gazelle:resolve go github.com/prysmaticlabs/hashtree //third_party/hashtree:go_default_library

go_library(
    name = "go_default_library",
    srcs = ["hashtree.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/crypto/hash/htr",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/hashtree:go_default_library",
        "@com_github_prysmaticlabs_gohashtree//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["hashtree_test.go"],
    embed = [":go_default_library"],
    deps = ["//testing/require:go_default_library"],
)
