load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["path.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/encoding/ssz/query",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["path_test.go"],
    deps = [
        ":go_default_library",
        "//testing/assert:go_default_library",
    ],
)
