load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["utils.go"],
    importpath = "github.com/OffchainLabs/prysm/v7/testing/bls/utils",
    visibility = ["//testing/bls:__subpackages__"],
    deps = [
        "//build/bazel:go_default_library",
        "//io/file:go_default_library",
        "//testing/require:go_default_library",
    ],
)
