load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "epochTimer.go",
        "helpers.go",
        "keystore.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/testing/endtoend/helpers",
    visibility = ["//testing/endtoend:__subpackages__"],
    deps = [
        "//config/params:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/endtoend/params:go_default_library",
        "//testing/endtoend/types:go_default_library",
        "//time:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_ethereum_go_ethereum//accounts/keystore:go_default_library",
        "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["helpers_test.go"],
    embed = [":go_default_library"],
    deps = ["//testing/require:go_default_library"],
)
